--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,8 +12,10 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="Login"
-        android:textSize="20dp"/>
+        android:textSize="20dp"
+        android:layout_marginTop="30sp"/>
     <EditText
+        android:id="@+id/edtUsuario"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -21,6 +23,7 @@
         android:layout_marginTop="30dp"
         android:hint="Usuario"/>
     <EditText
+        android:id="@+id/edtContraseña"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -28,8 +31,24 @@
         android:layout_marginTop="30dp"
         android:hint="Contraseña"/>
     <Button
+        android:id="@+id/btnIngresar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=""/>
+        android:text="Ingresar"
+        android:layout_gravity="center"
+        android:layout_marginTop="30dp"/>
+    <TextView
+        android:id="@+id/tvCuenta"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="Crear Cuenta"
+        android:layout_marginTop="50dp"/>
+    <TextView
+        android:id="@+id/tvOlvidastecontra"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="Olvidaste tu contraseña"
+        android:layout_marginTop="50dp"/>
+
 
 </LinearLayout>
