--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.arnoldo.myapplication.Registro">
+    tools:context="com.example.arnoldo.myapplication.Actividades.Registro">
 <android.support.design.widget.TextInputLayout
     android:id="@+id/inputNombre"
     android:layout_width="match_parent"
