--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,8 +29,19 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:gravity="center"
+        android:inputType="textPassword"
         android:layout_marginTop="30dp"
         android:hint="Contraseña"/>
+    <EditText
+        android:id="@+id/edtTelefono"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:inputType="number"
+        android:layout_marginTop="30dp"
+        android:hint="Telefono"/>
+
     <Button
         android:id="@+id/btnIngresar"
         android:layout_width="wrap_content"
