--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".Main">
 
     <item
         android:id="@+id/navigation_inicio"
@@ -15,5 +17,7 @@
         android:id="@+id/navigation_pedidos"
         android:icon="@drawable/ic_action_pedidos"
         android:title="Pedidos" />
+
+
 
 </menu>
