--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimary">#a50000</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#ffd600</color>
     <color name="withe">#ffffff</color>
+    <color name="colorError">#00bcd4</color>
+    <color name="accent_material_light_1">#b8af00</color>
+    <color name="primary_material_light">#b40000</color>
+    <color name="primary_dark_material_light">#8f0000</color>
 </resources>
