--- a/app/src/main/res/layout/fragment_inicio.xml
+++ b/app/src/main/res/layout/fragment_inicio.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.example.arnoldo.myapplication.Fragmentos.fragment_inicio">
 
     <!-- TODO: Update blank fragment layout -->
@@ -9,5 +10,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="inicio" />
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/btnFlotante"
+        style="FloatingActionButtonStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_action_name"
+        app:backgroundTint="@color/colorAccent"
+        app:fabSize="normal"
+        android:layout_gravity="bottom|right|end" />
 
 </FrameLayout>
