--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#a50000</color>
+    <color name="colorPrimary">#00ff00</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#ffd600</color>
     <color name="withe">#ffffff</color>
