--- a/app/src/main/res/layout/activity_spashscreen.xml
+++ b/app/src/main/res/layout/activity_spashscreen.xml
@@ -12,6 +12,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
 
-        android:src="@drawable/ic_launcher" />
+        android:src="@mipmap/ic_launcher" />
 
 </RelativeLayout>
