--- a/app/src/main/res/layout/fragment_clientes.xml
+++ b/app/src/main/res/layout/fragment_clientes.xml
@@ -2,13 +2,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.arnoldo.myapplication.Fragmentos.fragment_clientes">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:id="@+id/tvcliente"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Clientes" />
+<ListView
+    android:id="@+id/list_clientes"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"></ListView>
 
 </FrameLayout>
