--- a/app/src/main/res/layout/fragment_clientes.xml
+++ b/app/src/main/res/layout/fragment_clientes.xml
@@ -1,16 +1,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-<<<<<<< HEAD
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-=======
-    xmlns:app="http://schemas.android.com/apk/res-auto"
->>>>>>> develop
-    tools:context="com.example.arnoldo.myapplication.Fragmentos.fragment_clientes">
+    android:layout_height="match_parent">
 
     <!-- TODO: Update blank fragment layout -->
 <ListView
