--- a/app/src/main/res/layout/fragment_agregar_cliente.xml
+++ b/app/src/main/res/layout/fragment_agregar_cliente.xml
@@ -1,13 +1,65 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="20dp"
+    android:orientation="vertical"
     tools:context="com.example.arnoldo.myapplication.Fragmentos.fragment_agregarCliente">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.design.widget.TextInputEditText
+        android:id="@+id/edtNombreCliente"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:hint="Nombre"/>
 
-</FrameLayout>
+    <android.support.design.widget.TextInputEditText
+        android:id="@+id/edtNumeroCliente"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:hint="Número"/>
+
+    <android.support.design.widget.TextInputEditText
+        android:id="@+id/edtCorreoCliente"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:hint="Dirección"/>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/imageFotoCliente"
+            android:layout_width="120dp"
+            android:layout_height="100dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/ic_action_camara" />
+
+        <TextView
+            android:id="@+id/editText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/imageFotoCliente"
+            android:layout_centerHorizontal="true"
+            android:text="Agregar foto" />
+    </RelativeLayout>
+
+    <Button
+        android:id="@+id/btnAgregarCliente"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:text="AGREGAR"
+        android:textColor="@color/withe"
+        android:background="@color/primary_material_light"
+        />
+
+
+
+
+</LinearLayout>
