--- a/app/src/main/res/layout/fragment_agregar_cliente.xml
+++ b/app/src/main/res/layout/fragment_agregar_cliente.xml
@@ -6,6 +6,38 @@
     android:orientation="vertical"
     tools:context="com.example.arnoldo.myapplication.Fragmentos.fragment_agregarCliente">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:text="SEXO:"
+        android:layout_marginLeft="145dp"
+        android:textColor="#000000"
+        />
+
+    <RadioGroup
+        android:id="@+id/rgSexo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginLeft="80dp"
+        >
+        <RadioButton
+            android:id="@+id/rbHombre"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Hombre"
+            android:textColor="@color/colorPrimaryDark"
+            />
+        <RadioButton
+            android:id="@+id/rbMujer"
+            android:layout_marginLeft="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Mujer"
+            android:textColor="#f401e8"/>
+
+    </RadioGroup>
+
     <android.support.design.widget.TextInputEditText
         android:id="@+id/edtNombreCliente"
         android:layout_width="match_parent"
