contenido fragment pedidos y Fragment Inicio

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,8 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="Abonos App"
-        android:textSize="20sp"
-        />
+        android:textSize="20sp" />
     <EditText
         android:id="@+id/edtUsuario"
         android:layout_width="300sp"
