--- a/app/src/main/res/layout/fragment_agregar_pedido.xml
+++ b/app/src/main/res/layout/fragment_agregar_pedido.xml
@@ -1,13 +1,108 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.example.arnoldo.myapplication.Fragmentos.fragment_agregarPedido">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <RadioGroup
+        android:layout_marginTop="20sp"
+        android:id="@+id/rgSexo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginLeft="80dp">
+        <RadioButton
+            android:id="@+id/rbHombre"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Venta"
+            android:textColor="#000000" />
+        <RadioButton
+            android:id="@+id/rbMujer"
+            android:layout_marginLeft="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Pedido"
+            android:textColor="#000000"/>
+    </RadioGroup>
 
-</FrameLayout>
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/edtBuscarCliente"
+            android:layout_width="400sp"
+            android:layout_marginTop="20dp"
+            android:layout_height="wrap_content"
+           android:gravity="center"
+            android:hint="Buscar Cliente"/>
+
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="20dp">
+    <EditText
+    android:id="@+id/edtClave"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="20dp"
+    android:hint="Clave/Modelo"
+        android:layout_marginLeft="20dp"/>
+
+    <EditText
+        android:id="@+id/edtCantidad"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:hint="Cantidad"
+        android:layout_marginLeft="100dp"/>
+</LinearLayout>
+
+    <android.support.design.widget.TextInputEditText
+        android:id="@+id/edtProducto"
+        android:layout_width="400sp"
+        android:layout_marginTop="30dp"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:hint="Producto"/>
+    <LinearLayout
+        android:layout_marginTop="30dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp">
+        <EditText
+            android:id="@+id/edtTalla"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:hint="Talla"
+            android:layout_marginLeft="20dp"/>
+
+        <EditText
+            android:id="@+id/edtColor"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:hint="Color"
+            android:layout_marginLeft="190dp"/>
+    </LinearLayout>
+    <android.support.design.widget.TextInputEditText
+        android:id="@+id/edtCostoProducto"
+        android:layout_width="400sp"
+        android:layout_marginTop="20dp"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:hint="Costo del Producto"/>
+    <Button
+
+        android:id="@+id/btnAgregarPedido"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:text="AGREGAR"
+        android:textColor="@color/withe"
+        android:background="@color/primary_material_light"
+        />
+
+</LinearLayout>
