--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -35,6 +35,7 @@
         android:id="@+id/Tell"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="number"
         android:hint="Telefono" />
     <android.support.design.widget.TextInputLayout
         android:id="@+id/inpuPass"
