--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,11 +9,6 @@
 
     tools:context="com.example.arnoldo.myapplication.Actividades.MainActivity">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:background="@drawable/login" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -22,7 +17,7 @@
         android:textSize="20sp" />
     <EditText
         android:id="@+id/edtUsuario"
-        android:layout_width="300sp"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:gravity="center"
@@ -31,9 +26,9 @@
         android:hint="Ingrese su Email"/>
     <EditText
         android:id="@+id/edtContraseña"
-        android:layout_width="300sp"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20sp"
+        android:layout_marginTop="20dp"
         android:layout_gravity="center"
         android:inputType="textPassword"
         android:hint="Contraseña"
@@ -41,7 +36,7 @@
 
     <Button
         android:id="@+id/btnIngresar"
-        android:layout_width="200sp"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="Ingresar"
         android:background="@color/colorAccent"
@@ -49,7 +44,7 @@
         android:layout_marginTop="30dp"/>
     <TextView
         android:id="@+id/tvCuenta"
-        android:layout_width="100sp"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:hint="Crear Cuenta"
         android:textColor="#000"
