--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -15,6 +15,7 @@
         android:id="@+id/Nombre"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="text"
         android:hint="Nombre"/>
 
 </android.support.design.widget.TextInputLayout>
@@ -27,6 +28,7 @@
         android:id="@+id/E-mail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="textEmailAddress"
         android:hint="E-mail" />
     </android.support.design.widget.TextInputLayout>
 
@@ -40,11 +42,13 @@
     <android.support.design.widget.TextInputLayout
         android:id="@+id/inpuPass"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:passwordToggleEnabled="true">
     <EditText
         android:id="@+id/Pass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="textPassword"
         android:hint="Contraseña"
         />
     </android.support.design.widget.TextInputLayout>
@@ -52,7 +56,8 @@
     <android.support.design.widget.TextInputLayout
         android:id="@+id/inpucPass"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:passwordToggleEnabled="true">
 
     <EditText
         android:id="@+id/cPass"
