--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -12,7 +12,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <EditText
-        android:id="@+id/Nombre"
+        android:id="@+id/edtNombre"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="text"
@@ -25,27 +25,31 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
     <EditText
-        android:id="@+id/E-mail"
+        android:id="@+id/edtE-mail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
         android:hint="E-mail" />
     </android.support.design.widget.TextInputLayout>
-
-
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/inputTell"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <EditText
-        android:id="@+id/Tell"
+        android:id="@+id/edtTell"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="number"
         android:hint="Telefono" />
+    </android.support.design.widget.TextInputLayout>
+
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/inpuPass"
+        android:id="@+id/inputPass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:passwordToggleEnabled="true">
     <EditText
-        android:id="@+id/Pass"
+        android:id="@+id/edtPass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
@@ -54,15 +58,16 @@
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/inpucPass"
+        android:id="@+id/inputCpass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:passwordToggleEnabled="true">
 
     <EditText
-        android:id="@+id/cPass"
+        android:id="@+id/edtCpass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="textPassword"
         android:hint="Confirmar contraseña"
         />
     </android.support.design.widget.TextInputLayout>
