--- a/app/src/main/res/layout/fragment_agregar_pedido.xml
+++ b/app/src/main/res/layout/fragment_agregar_pedido.xml
@@ -8,19 +8,19 @@
     <!-- TODO: Update blank fragment layout -->
     <RadioGroup
         android:layout_marginTop="20sp"
-        android:id="@+id/rgSexo"
+        android:id="@+id/rgVenta_Pedido"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginLeft="80dp">
         <RadioButton
-            android:id="@+id/rbHombre"
+            android:id="@+id/rbVenta"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Venta"
             android:textColor="#000000" />
         <RadioButton
-            android:id="@+id/rbMujer"
+            android:id="@+id/rbPedido"
             android:layout_marginLeft="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -28,13 +28,14 @@
             android:textColor="#000000"/>
     </RadioGroup>
 
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/edtBuscarCliente"
-            android:layout_width="400sp"
-            android:layout_marginTop="20dp"
-            android:layout_height="wrap_content"
-           android:gravity="center"
-            android:hint="Buscar Cliente"/>
+    <SearchView
+        android:id="@+id/shBuscarCliente"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:iconifiedByDefault="false">
+        <requestFocus/>
+
+    </SearchView>
 
 <LinearLayout
     android:layout_width="wrap_content"
