Correcion de Api
Se guardaron cambios en base a la Api

--- a/app/src/main/res/layout/fragment_agregar_cliente.xml
+++ b/app/src/main/res/layout/fragment_agregar_cliente.xml
@@ -52,7 +52,7 @@
         android:hint="Número"/>
 
     <android.support.design.widget.TextInputEditText
-        android:id="@+id/edtCorreoCliente"
+        android:id="@+id/edtDireccionCliente"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
